--- a/exercise/13 项目实战/answer/13.1.md
+++ b/exercise/13 项目实战/answer/13.1.md
@@ -24,6 +24,7 @@ def show_role():
         player_info[i] = born_role()
     for i in enemier:
         enemy_info[i] = born_role()
+        
     print('----------------角色信息-------------------')
     print('你的人物：')
     for i in player_info:
@@ -34,7 +35,6 @@ def show_role():
         print('{}  血量:{}  攻击:{}'.format(i, enemy_info[i][0], enemy_info[i][1]))
 
     input('请按回车键继续')
-
 
 # 角色排序，选择出场顺序。
 def order_role():
@@ -47,9 +47,11 @@ def order_role():
     print('我方角色的出场顺序是：{}、{}、{}'.format(*player)) # *代表依次取列表里的元素
     print('敌方角色的出场顺序是：{}、{}、{}'.format(*enemier))
 
+
+ ## 这里要键个order_dict = {} ,player = []
+ 
 # 角色PK
 def pk_role(player_life, enemy_life):
-
     for i in range(3):
         print('--------------------第{}局-------------------'.format(i+1))
         print('玩家角色：{} vs 敌方角色：{}'.format(player[i],enemier[i]))
@@ -99,3 +101,12 @@ def main():
 # 启动程序（即调用主函数）
 main()
 ```
+
+##  show_role():将2个for写成一个  for i in range(3)
+##  order_role():global player ; order_dict={} ;player = [] ;在print()或input（）里边可加入换行
+##  pk_role():round=1;score=0;player_name/player_life/player_attack在函数开头都定义好
+    while 并列else 调用show_result()  print(show_result(player_life, enemy_life)[1])
+    score += int(show_result(player_life, enemy_life)[0])
+## show_result():    if player_life > 0 and enemy_life <= 0:
+        result = '\n敌人死翘翘了，你赢了！'
+        return 1, result  # 返回元组(1,'\n敌人死翘翘了，你赢了！')，类似角色属性的传递。
